--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title></title>
+  <title>Hello World</title>
   <link rel="stylesheet" href="style.css" type="text/css" media="screen">
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="./scripts/hello.js"></script>
@@ -10,6 +10,10 @@
 <body>
     <div class="content">
         <button class="clickButton" onclick="helloWorld()">Click Me!</button>
+        <div class="controls">
+            <input id="nameBox" type="text"/>
+            <button id="submitName">Submit!</button>
+        </div>
     </div>
 </body>
 </html>
