Adding period as per Pull request feedback.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         </div>
     </div>
     <div id="demo"></div>
-    <div>Some random text</div>
+    <div>Some random text.</div>
 </body>
 </html>
