--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     </div>
     <div id="demo"></div>
     <div>Some random text.</div>
+    <div id="Cynthia_Div">
+        Cynthia's lemon bars are the yummiest!!!
+    </div>
 </body>
 </html>
