--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
     </div>
     <div id="demo"></div>
+    <div>Yooooooooo</div>
     <div>Some random text.</div>
 </body>
 </html>
